--- a/drupAuto.csproj
+++ b/drupAuto.csproj
@@ -77,6 +77,8 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="db_operations.cs" />
+    <Compile Include="events\login.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
