--- a/drupAuto.csproj
+++ b/drupAuto.csproj
@@ -92,16 +92,16 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="db_operations.cs" />
-    <Compile Include="events\skip_popup.cs" />
     <Compile Include="events\login.cs" />
-    <Compile Include="Pages\DropdownElements.cs" />
-    <Compile Include="Pages\LoginPage.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
     <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <Folder Include="Pages\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Import Project="packages\Selenium.WebDriver.4.33.0\build\Selenium.WebDriver.targets" Condition="Exists('packages\Selenium.WebDriver.4.33.0\build\Selenium.WebDriver.targets')" />
