--- a/drupAuto.csproj
+++ b/drupAuto.csproj
@@ -120,6 +120,7 @@
     <Compile Include="Models\AccountsModel.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SimpleLogger.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
